overflow in chrome fixed

--- a/src/css/Style3.css
+++ b/src/css/Style3.css
@@ -3,6 +3,11 @@
     scroll-behavior: smooth;
 }
 
+html {
+    overflow-x: hidden;
+    
+}
+
 :root {
     --d: 700ms;
     --e: cubic-bezier(0.19, 1, 0.22, 1);
